[package]
name = "cblas-sys"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
description = "The package provides bindings to CBLAS (C)."
documentation = "https://docs.rs/cblas-sys"
homepage = "https://github.com/blas-lapack-rs/cblas-sys"
repository = "https://github.com/blas-lapack-rs/cblas-sys"
readme = "README.md"
categories = ["external-ffi-bindings", "science"]
keywords = ["linear-algebra"]
